--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.12.4",
     "express": "^4.12.3",
     "mysql": "^2.6.2",
     "paypal-rest-sdk": "^1.5.2",
