--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app.js"
   },
   "dependencies": {
     "body-parser": "^1.12.4",
@@ -11,6 +11,7 @@
     "mustache-express": "^1.2.1",
     "mysql": "^2.6.2",
     "paypal-rest-sdk": "^1.5.2",
-    "request": "^2.55.0"
+    "request": "^2.55.0",
+    "socket.io": "^1.3.5"
   }
 }
