--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.12.4",
     "express": "^4.12.3",
+    "game-server-query": "^1.0.2",
     "mustache-express": "^1.2.1",
     "mysql": "^2.6.2",
     "paypal-rest-sdk": "^1.5.2",
