--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "api",
-  "version": "0.0.0",
-  "private": true,
+  "name": "exclserver-api",
+  "version": "0.0.1",
+  "private": false,
   "scripts": {
     "start": "node ./app.js"
   },
